# waveform-mcp

./: CHANGELOG.md  Cargo.toml  QWEN.md  README.md  example_client.py  run.sh
.github/workflows/: ci.yml
src/: condition.lalrpop  condition.rs  formatting.rs  hierarchy.rs  lib.rs  main.rs  signal.rs
tests/: common_tests.rs  condition_tests.rs  formatting_tests.rs  hierarchy_tests.rs  integration_test.rs  signal_tests.rs
