[package]
name = "waveform-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
wellen = "0.20"
mcp-sdk-rs = "0.3"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.24"
